MiniL/f3/source.output
Terminals unused in grammar

   LO
   HI


Grammar

    0 $accept: Program $end

    1 Functions: /* empty */
    2          | Functions Function

    3 Declarations: /* empty */
    4             | Declarations Declaration

    5 Statements: Statement ';'
    6           | Statements Statement ';'

    7 IDs: ID
    8    | IDs ',' ID

    9 Vars: Var
   10     | Vars ',' Var

   11 Expressions: /* empty */
   12            | NonemptyExpressionList

   13 NonemptyExpressionList: Expression
   14                       | NonemptyExpressionList ',' Expression

   15 Program: Functions

   16 Function: FUNCTION ID ';' BEGINPARAMS Declarations ENDPARAMS BEGINLOCALS Declarations ENDLOCALS BEGINBODY Statements ENDBODY

   17 Declaration: IDs ':' INTEGER ';'
   18            | IDs ':' ARRAY '[' NUMBER ']' OF INTEGER ';'

   19 Statement: Var ASSGN Expression
   20          | IF BoolExpr THEN Statements ENDIF
   21          | IF BoolExpr THEN Statements ELSE Statements ENDIF
   22          | WHILE BoolExpr BEGINLOOP Statements ENDLOOP
   23          | DO BEGINLOOP Statements ENDLOOP WHILE BoolExpr
   24          | READ Vars
   25          | WRITE Vars
   26          | CONTINUE
   27          | RETURN Expression

   28 BoolExpr: Expression EQ Expression
   29         | Expression NE Expression
   30         | Expression LT Expression
   31         | Expression GT Expression
   32         | Expression LE Expression
   33         | Expression GE Expression
   34         | BoolExpr AND BoolExpr
   35         | BoolExpr OR BoolExpr
   36         | NOT BoolExpr
   37         | TRUE
   38         | FALSE
   39         | '(' BoolExpr ')'

   40 Expression: Var
   41           | NUMBER
   42           | '(' Expression ')'
   43           | ID '(' Expressions ')'
   44           | Expression '+' Expression
   45           | Expression '-' Expression
   46           | Expression '*' Expression
   47           | Expression '/' Expression
   48           | Expression '%' Expression
   49           | '-' Expression

   50 Var: ID
   51    | ID '[' Expression ']'


Terminals, with rules where they appear

$end (0) 0
'%' (37) 48
'(' (40) 39 42 43
')' (41) 39 42 43
'*' (42) 46
'+' (43) 44
',' (44) 8 10 14
'-' (45) 45 49
'/' (47) 47
':' (58) 17 18
';' (59) 5 6 16 17 18
'[' (91) 18 51
']' (93) 18 51
error (256)
LO (258)
INTEGER (259) 17 18
ARRAY (260) 18
FUNCTION (261) 16
BEGINPARAMS (262) 16
ENDPARAMS (263) 16
BEGINLOCALS (264) 16
ENDLOCALS (265) 16
BEGINBODY (266) 16
ENDBODY (267) 16
BEGINLOOP (268) 22 23
ENDLOOP (269) 22 23
IF (270) 20 21
THEN (271) 20 21
ELSE (272) 21
ENDIF (273) 20 21
DO (274) 23
WHILE (275) 22 23
READ (276) 24
WRITE (277) 25
CONTINUE (278) 26
RETURN (279) 27
TRUE (280) 37
FALSE (281) 38
ASSGN (282) 19
OF (283) 18
OR (284) 35
AND (285) 34
NOT (286) 36
NE (287) 29
EQ (288) 28
GE (289) 33
GT (290) 31
LE (291) 32
LT (292) 30
UMINUS (293)
HI (294)
ID (295) 7 8 16 43 50 51
NUMBER (296) 18 41


Nonterminals, with rules where they appear

$accept (54)
    on left: 0
Functions (55)
    on left: 1 2, on right: 2 15
Declarations (56)
    on left: 3 4, on right: 4 16
Statements (57)
    on left: 5 6, on right: 6 16 20 21 22 23
IDs (58)
    on left: 7 8, on right: 8 17 18
Vars (59)
    on left: 9 10, on right: 10 24 25
Expressions (60)
    on left: 11 12, on right: 43
NonemptyExpressionList (61)
    on left: 13 14, on right: 12 14
Program (62)
    on left: 15, on right: 0
Function (63)
    on left: 16, on right: 2
Declaration (64)
    on left: 17 18, on right: 4
Statement (65)
    on left: 19 20 21 22 23 24 25 26 27, on right: 5 6
BoolExpr (66)
    on left: 28 29 30 31 32 33 34 35 36 37 38 39, on right: 20 21 22
    23 34 35 36 39
Expression (67)
    on left: 40 41 42 43 44 45 46 47 48 49, on right: 13 14 19 27 28
    29 30 31 32 33 42 44 45 46 47 48 49 51
Var (68)
    on left: 50 51, on right: 9 10 19 40


State 0

    0 $accept: . Program $end

    $default  reduce using rule 1 (Functions)

    Functions  go to state 1
    Program    go to state 2


State 1

    2 Functions: Functions . Function
   15 Program: Functions .

    FUNCTION  shift, and go to state 3

    $default  reduce using rule 15 (Program)

    Function  go to state 4


State 2

    0 $accept: Program . $end

    $end  shift, and go to state 5


State 3

   16 Function: FUNCTION . ID ';' BEGINPARAMS Declarations ENDPARAMS BEGINLOCALS Declarations ENDLOCALS BEGINBODY Statements ENDBODY

    ID  shift, and go to state 6


State 4

    2 Functions: Functions Function .

    $default  reduce using rule 2 (Functions)


State 5

    0 $accept: Program $end .

    $default  accept


State 6

   16 Function: FUNCTION ID . ';' BEGINPARAMS Declarations ENDPARAMS BEGINLOCALS Declarations ENDLOCALS BEGINBODY Statements ENDBODY

    ';'  shift, and go to state 7


State 7

   16 Function: FUNCTION ID ';' . BEGINPARAMS Declarations ENDPARAMS BEGINLOCALS Declarations ENDLOCALS BEGINBODY Statements ENDBODY

    BEGINPARAMS  shift, and go to state 8


State 8

   16 Function: FUNCTION ID ';' BEGINPARAMS . Declarations ENDPARAMS BEGINLOCALS Declarations ENDLOCALS BEGINBODY Statements ENDBODY

    $default  reduce using rule 3 (Declarations)

    Declarations  go to state 9


State 9

    4 Declarations: Declarations . Declaration
   16 Function: FUNCTION ID ';' BEGINPARAMS Declarations . ENDPARAMS BEGINLOCALS Declarations ENDLOCALS BEGINBODY Statements ENDBODY

    ENDPARAMS  shift, and go to state 10
    ID         shift, and go to state 11

    IDs          go to state 12
    Declaration  go to state 13


State 10

   16 Function: FUNCTION ID ';' BEGINPARAMS Declarations ENDPARAMS . BEGINLOCALS Declarations ENDLOCALS BEGINBODY Statements ENDBODY

    BEGINLOCALS  shift, and go to state 14


State 11

    7 IDs: ID .

    $default  reduce using rule 7 (IDs)


State 12

    8 IDs: IDs . ',' ID
   17 Declaration: IDs . ':' INTEGER ';'
   18            | IDs . ':' ARRAY '[' NUMBER ']' OF INTEGER ';'

    ','  shift, and go to state 15
    ':'  shift, and go to state 16


State 13

    4 Declarations: Declarations Declaration .

    $default  reduce using rule 4 (Declarations)


State 14

   16 Function: FUNCTION ID ';' BEGINPARAMS Declarations ENDPARAMS BEGINLOCALS . Declarations ENDLOCALS BEGINBODY Statements ENDBODY

    $default  reduce using rule 3 (Declarations)

    Declarations  go to state 17


State 15

    8 IDs: IDs ',' . ID

    ID  shift, and go to state 18


State 16

   17 Declaration: IDs ':' . INTEGER ';'
   18            | IDs ':' . ARRAY '[' NUMBER ']' OF INTEGER ';'

    INTEGER  shift, and go to state 19
    ARRAY    shift, and go to state 20


State 17

    4 Declarations: Declarations . Declaration
   16 Function: FUNCTION ID ';' BEGINPARAMS Declarations ENDPARAMS BEGINLOCALS Declarations . ENDLOCALS BEGINBODY Statements ENDBODY

    ENDLOCALS  shift, and go to state 21
    ID         shift, and go to state 11

    IDs          go to state 12
    Declaration  go to state 13


State 18

    8 IDs: IDs ',' ID .

    $default  reduce using rule 8 (IDs)


State 19

   17 Declaration: IDs ':' INTEGER . ';'

    ';'  shift, and go to state 22


State 20

   18 Declaration: IDs ':' ARRAY . '[' NUMBER ']' OF INTEGER ';'

    '['  shift, and go to state 23


State 21

   16 Function: FUNCTION ID ';' BEGINPARAMS Declarations ENDPARAMS BEGINLOCALS Declarations ENDLOCALS . BEGINBODY Statements ENDBODY

    BEGINBODY  shift, and go to state 24


State 22

   17 Declaration: IDs ':' INTEGER ';' .

    $default  reduce using rule 17 (Declaration)


State 23

   18 Declaration: IDs ':' ARRAY '[' . NUMBER ']' OF INTEGER ';'

    NUMBER  shift, and go to state 25


State 24

   16 Function: FUNCTION ID ';' BEGINPARAMS Declarations ENDPARAMS BEGINLOCALS Declarations ENDLOCALS BEGINBODY . Statements ENDBODY

    IF        shift, and go to state 26
    DO        shift, and go to state 27
    WHILE     shift, and go to state 28
    READ      shift, and go to state 29
    WRITE     shift, and go to state 30
    CONTINUE  shift, and go to state 31
    RETURN    shift, and go to state 32
    ID        shift, and go to state 33

    Statements  go to state 34
    Statement   go to state 35
    Var         go to state 36


State 25

   18 Declaration: IDs ':' ARRAY '[' NUMBER . ']' OF INTEGER ';'

    ']'  shift, and go to state 37


State 26

   20 Statement: IF . BoolExpr THEN Statements ENDIF
   21          | IF . BoolExpr THEN Statements ELSE Statements ENDIF

    TRUE    shift, and go to state 38
    FALSE   shift, and go to state 39
    NOT     shift, and go to state 40
    '-'     shift, and go to state 41
    '('     shift, and go to state 42
    ID      shift, and go to state 43
    NUMBER  shift, and go to state 44

    BoolExpr    go to state 45
    Expression  go to state 46
    Var         go to state 47


State 27

   23 Statement: DO . BEGINLOOP Statements ENDLOOP WHILE BoolExpr

    BEGINLOOP  shift, and go to state 48


State 28

   22 Statement: WHILE . BoolExpr BEGINLOOP Statements ENDLOOP

    TRUE    shift, and go to state 38
    FALSE   shift, and go to state 39
    NOT     shift, and go to state 40
    '-'     shift, and go to state 41
    '('     shift, and go to state 42
    ID      shift, and go to state 43
    NUMBER  shift, and go to state 44

    BoolExpr    go to state 49
    Expression  go to state 46
    Var         go to state 47


State 29

   24 Statement: READ . Vars

    ID  shift, and go to state 33

    Vars  go to state 50
    Var   go to state 51


State 30

   25 Statement: WRITE . Vars

    ID  shift, and go to state 33

    Vars  go to state 52
    Var   go to state 51


State 31

   26 Statement: CONTINUE .

    $default  reduce using rule 26 (Statement)


State 32

   27 Statement: RETURN . Expression

    '-'     shift, and go to state 41
    '('     shift, and go to state 53
    ID      shift, and go to state 43
    NUMBER  shift, and go to state 44

    Expression  go to state 54
    Var         go to state 47


State 33

   50 Var: ID .
   51    | ID . '[' Expression ']'

    '['  shift, and go to state 55

    $default  reduce using rule 50 (Var)


State 34

    6 Statements: Statements . Statement ';'
   16 Function: FUNCTION ID ';' BEGINPARAMS Declarations ENDPARAMS BEGINLOCALS Declarations ENDLOCALS BEGINBODY Statements . ENDBODY

    ENDBODY   shift, and go to state 56
    IF        shift, and go to state 26
    DO        shift, and go to state 27
    WHILE     shift, and go to state 28
    READ      shift, and go to state 29
    WRITE     shift, and go to state 30
    CONTINUE  shift, and go to state 31
    RETURN    shift, and go to state 32
    ID        shift, and go to state 33

    Statement  go to state 57
    Var        go to state 36


State 35

    5 Statements: Statement . ';'

    ';'  shift, and go to state 58


State 36

   19 Statement: Var . ASSGN Expression

    ASSGN  shift, and go to state 59


State 37

   18 Declaration: IDs ':' ARRAY '[' NUMBER ']' . OF INTEGER ';'

    OF  shift, and go to state 60


State 38

   37 BoolExpr: TRUE .

    $default  reduce using rule 37 (BoolExpr)


State 39

   38 BoolExpr: FALSE .

    $default  reduce using rule 38 (BoolExpr)


State 40

   36 BoolExpr: NOT . BoolExpr

    TRUE    shift, and go to state 38
    FALSE   shift, and go to state 39
    NOT     shift, and go to state 40
    '-'     shift, and go to state 41
    '('     shift, and go to state 42
    ID      shift, and go to state 43
    NUMBER  shift, and go to state 44

    BoolExpr    go to state 61
    Expression  go to state 46
    Var         go to state 47


State 41

   49 Expression: '-' . Expression

    '-'     shift, and go to state 41
    '('     shift, and go to state 53
    ID      shift, and go to state 43
    NUMBER  shift, and go to state 44

    Expression  go to state 62
    Var         go to state 47


State 42

   39 BoolExpr: '(' . BoolExpr ')'
   42 Expression: '(' . Expression ')'

    TRUE    shift, and go to state 38
    FALSE   shift, and go to state 39
    NOT     shift, and go to state 40
    '-'     shift, and go to state 41
    '('     shift, and go to state 42
    ID      shift, and go to state 43
    NUMBER  shift, and go to state 44

    BoolExpr    go to state 63
    Expression  go to state 64
    Var         go to state 47


State 43

   43 Expression: ID . '(' Expressions ')'
   50 Var: ID .
   51    | ID . '[' Expression ']'

    '['  shift, and go to state 55
    '('  shift, and go to state 65

    $default  reduce using rule 50 (Var)


State 44

   41 Expression: NUMBER .

    $default  reduce using rule 41 (Expression)


State 45

   20 Statement: IF BoolExpr . THEN Statements ENDIF
   21          | IF BoolExpr . THEN Statements ELSE Statements ENDIF
   34 BoolExpr: BoolExpr . AND BoolExpr
   35         | BoolExpr . OR BoolExpr

    THEN  shift, and go to state 66
    OR    shift, and go to state 67
    AND   shift, and go to state 68


State 46

   28 BoolExpr: Expression . EQ Expression
   29         | Expression . NE Expression
   30         | Expression . LT Expression
   31         | Expression . GT Expression
   32         | Expression . LE Expression
   33         | Expression . GE Expression
   44 Expression: Expression . '+' Expression
   45           | Expression . '-' Expression
   46           | Expression . '*' Expression
   47           | Expression . '/' Expression
   48           | Expression . '%' Expression

    NE   shift, and go to state 69
    EQ   shift, and go to state 70
    GE   shift, and go to state 71
    GT   shift, and go to state 72
    LE   shift, and go to state 73
    LT   shift, and go to state 74
    '-'  shift, and go to state 75
    '+'  shift, and go to state 76
    '%'  shift, and go to state 77
    '/'  shift, and go to state 78
    '*'  shift, and go to state 79


State 47

   40 Expression: Var .

    $default  reduce using rule 40 (Expression)


State 48

   23 Statement: DO BEGINLOOP . Statements ENDLOOP WHILE BoolExpr

    IF        shift, and go to state 26
    DO        shift, and go to state 27
    WHILE     shift, and go to state 28
    READ      shift, and go to state 29
    WRITE     shift, and go to state 30
    CONTINUE  shift, and go to state 31
    RETURN    shift, and go to state 32
    ID        shift, and go to state 33

    Statements  go to state 80
    Statement   go to state 35
    Var         go to state 36


State 49

   22 Statement: WHILE BoolExpr . BEGINLOOP Statements ENDLOOP
   34 BoolExpr: BoolExpr . AND BoolExpr
   35         | BoolExpr . OR BoolExpr

    BEGINLOOP  shift, and go to state 81
    OR         shift, and go to state 67
    AND        shift, and go to state 68


State 50

   10 Vars: Vars . ',' Var
   24 Statement: READ Vars .

    ','  shift, and go to state 82

    $default  reduce using rule 24 (Statement)


State 51

    9 Vars: Var .

    $default  reduce using rule 9 (Vars)


State 52

   10 Vars: Vars . ',' Var
   25 Statement: WRITE Vars .

    ','  shift, and go to state 82

    $default  reduce using rule 25 (Statement)


State 53

   42 Expression: '(' . Expression ')'

    '-'     shift, and go to state 41
    '('     shift, and go to state 53
    ID      shift, and go to state 43
    NUMBER  shift, and go to state 44

    Expression  go to state 83
    Var         go to state 47


State 54

   27 Statement: RETURN Expression .
   44 Expression: Expression . '+' Expression
   45           | Expression . '-' Expression
   46           | Expression . '*' Expression
   47           | Expression . '/' Expression
   48           | Expression . '%' Expression

    '-'  shift, and go to state 75
    '+'  shift, and go to state 76
    '%'  shift, and go to state 77
    '/'  shift, and go to state 78
    '*'  shift, and go to state 79

    $default  reduce using rule 27 (Statement)


State 55

   51 Var: ID '[' . Expression ']'

    '-'     shift, and go to state 41
    '('     shift, and go to state 53
    ID      shift, and go to state 43
    NUMBER  shift, and go to state 44

    Expression  go to state 84
    Var         go to state 47


State 56

   16 Function: FUNCTION ID ';' BEGINPARAMS Declarations ENDPARAMS BEGINLOCALS Declarations ENDLOCALS BEGINBODY Statements ENDBODY .

    $default  reduce using rule 16 (Function)


State 57

    6 Statements: Statements Statement . ';'

    ';'  shift, and go to state 85


State 58

    5 Statements: Statement ';' .

    $default  reduce using rule 5 (Statements)


State 59

   19 Statement: Var ASSGN . Expression

    '-'     shift, and go to state 41
    '('     shift, and go to state 53
    ID      shift, and go to state 43
    NUMBER  shift, and go to state 44

    Expression  go to state 86
    Var         go to state 47


State 60

   18 Declaration: IDs ':' ARRAY '[' NUMBER ']' OF . INTEGER ';'

    INTEGER  shift, and go to state 87


State 61

   34 BoolExpr: BoolExpr . AND BoolExpr
   35         | BoolExpr . OR BoolExpr
   36         | NOT BoolExpr .

    $default  reduce using rule 36 (BoolExpr)


State 62

   44 Expression: Expression . '+' Expression
   45           | Expression . '-' Expression
   46           | Expression . '*' Expression
   47           | Expression . '/' Expression
   48           | Expression . '%' Expression
   49           | '-' Expression .

    $default  reduce using rule 49 (Expression)


State 63

   34 BoolExpr: BoolExpr . AND BoolExpr
   35         | BoolExpr . OR BoolExpr
   39         | '(' BoolExpr . ')'

    OR   shift, and go to state 67
    AND  shift, and go to state 68
    ')'  shift, and go to state 88


State 64

   28 BoolExpr: Expression . EQ Expression
   29         | Expression . NE Expression
   30         | Expression . LT Expression
   31         | Expression . GT Expression
   32         | Expression . LE Expression
   33         | Expression . GE Expression
   42 Expression: '(' Expression . ')'
   44           | Expression . '+' Expression
   45           | Expression . '-' Expression
   46           | Expression . '*' Expression
   47           | Expression . '/' Expression
   48           | Expression . '%' Expression

    NE   shift, and go to state 69
    EQ   shift, and go to state 70
    GE   shift, and go to state 71
    GT   shift, and go to state 72
    LE   shift, and go to state 73
    LT   shift, and go to state 74
    '-'  shift, and go to state 75
    '+'  shift, and go to state 76
    '%'  shift, and go to state 77
    '/'  shift, and go to state 78
    '*'  shift, and go to state 79
    ')'  shift, and go to state 89


State 65

   43 Expression: ID '(' . Expressions ')'

    '-'     shift, and go to state 41
    '('     shift, and go to state 53
    ID      shift, and go to state 43
    NUMBER  shift, and go to state 44

    $default  reduce using rule 11 (Expressions)

    Expressions             go to state 90
    NonemptyExpressionList  go to state 91
    Expression              go to state 92
    Var                     go to state 47


State 66

   20 Statement: IF BoolExpr THEN . Statements ENDIF
   21          | IF BoolExpr THEN . Statements ELSE Statements ENDIF

    IF        shift, and go to state 26
    DO        shift, and go to state 27
    WHILE     shift, and go to state 28
    READ      shift, and go to state 29
    WRITE     shift, and go to state 30
    CONTINUE  shift, and go to state 31
    RETURN    shift, and go to state 32
    ID        shift, and go to state 33

    Statements  go to state 93
    Statement   go to state 35
    Var         go to state 36


State 67

   35 BoolExpr: BoolExpr OR . BoolExpr

    TRUE    shift, and go to state 38
    FALSE   shift, and go to state 39
    NOT     shift, and go to state 40
    '-'     shift, and go to state 41
    '('     shift, and go to state 42
    ID      shift, and go to state 43
    NUMBER  shift, and go to state 44

    BoolExpr    go to state 94
    Expression  go to state 46
    Var         go to state 47


State 68

   34 BoolExpr: BoolExpr AND . BoolExpr

    TRUE    shift, and go to state 38
    FALSE   shift, and go to state 39
    NOT     shift, and go to state 40
    '-'     shift, and go to state 41
    '('     shift, and go to state 42
    ID      shift, and go to state 43
    NUMBER  shift, and go to state 44

    BoolExpr    go to state 95
    Expression  go to state 46
    Var         go to state 47


State 69

   29 BoolExpr: Expression NE . Expression

    '-'     shift, and go to state 41
    '('     shift, and go to state 53
    ID      shift, and go to state 43
    NUMBER  shift, and go to state 44

    Expression  go to state 96
    Var         go to state 47


State 70

   28 BoolExpr: Expression EQ . Expression

    '-'     shift, and go to state 41
    '('     shift, and go to state 53
    ID      shift, and go to state 43
    NUMBER  shift, and go to state 44

    Expression  go to state 97
    Var         go to state 47


State 71

   33 BoolExpr: Expression GE . Expression

    '-'     shift, and go to state 41
    '('     shift, and go to state 53
    ID      shift, and go to state 43
    NUMBER  shift, and go to state 44

    Expression  go to state 98
    Var         go to state 47


State 72

   31 BoolExpr: Expression GT . Expression

    '-'     shift, and go to state 41
    '('     shift, and go to state 53
    ID      shift, and go to state 43
    NUMBER  shift, and go to state 44

    Expression  go to state 99
    Var         go to state 47


State 73

   32 BoolExpr: Expression LE . Expression

    '-'     shift, and go to state 41
    '('     shift, and go to state 53
    ID      shift, and go to state 43
    NUMBER  shift, and go to state 44

    Expression  go to state 100
    Var         go to state 47


State 74

   30 BoolExpr: Expression LT . Expression

    '-'     shift, and go to state 41
    '('     shift, and go to state 53
    ID      shift, and go to state 43
    NUMBER  shift, and go to state 44

    Expression  go to state 101
    Var         go to state 47


State 75

   45 Expression: Expression '-' . Expression

    '-'     shift, and go to state 41
    '('     shift, and go to state 53
    ID      shift, and go to state 43
    NUMBER  shift, and go to state 44

    Expression  go to state 102
    Var         go to state 47


State 76

   44 Expression: Expression '+' . Expression

    '-'     shift, and go to state 41
    '('     shift, and go to state 53
    ID      shift, and go to state 43
    NUMBER  shift, and go to state 44

    Expression  go to state 103
    Var         go to state 47


State 77

   48 Expression: Expression '%' . Expression

    '-'     shift, and go to state 41
    '('     shift, and go to state 53
    ID      shift, and go to state 43
    NUMBER  shift, and go to state 44

    Expression  go to state 104
    Var         go to state 47


State 78

   47 Expression: Expression '/' . Expression

    '-'     shift, and go to state 41
    '('     shift, and go to state 53
    ID      shift, and go to state 43
    NUMBER  shift, and go to state 44

    Expression  go to state 105
    Var         go to state 47


State 79

   46 Expression: Expression '*' . Expression

    '-'     shift, and go to state 41
    '('     shift, and go to state 53
    ID      shift, and go to state 43
    NUMBER  shift, and go to state 44

    Expression  go to state 106
    Var         go to state 47


State 80

    6 Statements: Statements . Statement ';'
   23 Statement: DO BEGINLOOP Statements . ENDLOOP WHILE BoolExpr

    ENDLOOP   shift, and go to state 107
    IF        shift, and go to state 26
    DO        shift, and go to state 27
    WHILE     shift, and go to state 28
    READ      shift, and go to state 29
    WRITE     shift, and go to state 30
    CONTINUE  shift, and go to state 31
    RETURN    shift, and go to state 32
    ID        shift, and go to state 33

    Statement  go to state 57
    Var        go to state 36


State 81

   22 Statement: WHILE BoolExpr BEGINLOOP . Statements ENDLOOP

    IF        shift, and go to state 26
    DO        shift, and go to state 27
    WHILE     shift, and go to state 28
    READ      shift, and go to state 29
    WRITE     shift, and go to state 30
    CONTINUE  shift, and go to state 31
    RETURN    shift, and go to state 32
    ID        shift, and go to state 33

    Statements  go to state 108
    Statement   go to state 35
    Var         go to state 36


State 82

   10 Vars: Vars ',' . Var

    ID  shift, and go to state 33

    Var  go to state 109


State 83
